Conclusão dos testes e SonarQube