@@ -1,8 +1,7 @@
 package br.com.fiap.pedido.controller;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.*;
-
+import org.springframework.http.HttpStatus;
 import br.com.fiap.pedido.model.PedidoModel;
 import br.com.fiap.pedido.model.dto.PedidoRequestDTO;
 import br.com.fiap.pedido.model.dto.PedidoResponseDTO;
@@ -10,22 +9,26 @@ import br.com.fiap.pedido.service.PedidoService;
 import br.com.fiap.pedido.utils.Mapper;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/pedidos")
 public class PedidoController {
-
-    @Autowired
-    private PedidoService pedidoService;
+	
+	public PedidoController(PedidoService pedidoService) {
+		this.pedidoService = pedidoService;
+	}
+    
+    private final PedidoService pedidoService;
 
     @GetMapping
+    @ResponseStatus(HttpStatus.OK)
     public List<PedidoResponseDTO> listarPedido() {
         var pedidos = pedidoService.listarPedido();
-        return pedidos.stream().map(p -> Mapper.mapPedidoModelParaPedidoResponseDTO(p)).collect(Collectors.toList());
+        return pedidos.stream().map(Mapper::mapPedidoModelParaPedidoResponseDTO).toList();
     }
 
     @PostMapping
+    @ResponseStatus(HttpStatus.CREATED)
     public PedidoResponseDTO criarPedido(@RequestBody PedidoRequestDTO pedidoRequestDTO) {
         PedidoModel pedidoModel = Mapper.mapPedidoRequestDtoParaPedidoModel(pedidoRequestDTO);
         pedidoModel = pedidoService.criarPedido(pedidoModel);
@@ -33,12 +36,14 @@ public class PedidoController {
     }
 
     @PutMapping("/finalizar/{id}")
+    @ResponseStatus(HttpStatus.OK)
     public PedidoResponseDTO finalizarPedido(@PathVariable Integer id) {
         PedidoModel pedidoModel = pedidoService.finalizarPedido(id);
         return Mapper.mapPedidoModelParaPedidoResponseDTO(pedidoModel);
     }
 
     @GetMapping("/{id}")
+    @ResponseStatus(HttpStatus.OK)
     public PedidoResponseDTO obterPedido(@PathVariable Integer id) {
         PedidoModel pedidoModel = pedidoService.obterPedido(id);
 
@@ -46,6 +51,7 @@ public class PedidoController {
     }
 
     @PutMapping("/{id}")
+    @ResponseStatus(HttpStatus.OK)
     public PedidoResponseDTO atualizarPedido(@PathVariable Integer id, @RequestBody PedidoRequestDTO pedidoRequestDTO) {
         PedidoModel pedidoModel = Mapper.mapPedidoRequestDtoParaPedidoModel(pedidoRequestDTO);
         PedidoModel pedidoAtualizado = pedidoService.atualizarPedido(id, pedidoModel);
@@ -53,6 +59,7 @@ public class PedidoController {
     }
 
     @DeleteMapping("/{id}")
+    @ResponseStatus(HttpStatus.NO_CONTENT)
     public void excluirPedido(@PathVariable Integer id) {        
         pedidoService.excluirPedido(id);
     }
